KNOWN BUGS:
* The code sometimes uses timeout_client where it should use a server timeout.
|
20080624a: Changes since 20070602a:
- Change: Improve logging of feedtype (when posting).

20070602a: Changes since 20070108a:
- Bugfix: applyfilter no longer refuses to run in dryrun mode.
  Reported by Clemens Fischer. Broken since 2005-01-05 when
  applyfilter's -C option was removed.
- Change: Improve some applyfilter error messages.

20070108a: Changes since 20070101a:
- Bugfix: do not crash when using inverted newsgroup[s] = !... matches
  in filter files.  Reported by Wolfgang Bauer.
- Portability: Support compilation on systems with non-empty EXEEXT.

20070101a: Changes since 20061204a:
- Documentation: document no_direct_spool in leafnode(8). Found by
  Reiner Steib.
- Rebuild configure with autoconf 2.60 (not documented in released tarball).

20061204a: Changes since 20061010a:
- Bugfix: use proper prototype for mastring.h's mastr_cat.
  Reported by Georg Schwarz.
- Bugfix: if none of the upstream articles can be fetched for a certain
  group, do NOT skip to the next server. Found by Martin Brunzel.

20061010a: Changes since 20060831a:
- Documentation: in leafnode(8)'s section on groupexpire, list the
  precedence information. Found by Clemens Fischer.

20060831a: Changes since 20060826a:
- Change: an empty mail address in the moderators file means "no
  moderator set" and causes leafnode to post the article rather than
  mailing it to the moderator. Useful for gmane when the fallback
  moderator of ISC is set. Suggested by Matěj Cepl.
- Change: Support %% for INN compatibility.
- Documentation: add moderators(5) manual page.

20060826a: Changes since 20060711a:
- Bugfix: handle 400...499 codes in reply to ARTICLE command properly.
  Reported and fix tested by Martin Brunzel.
- Bugfix: if a fatal fetch error occurs, proceed to next server.
- Update: the leafnode.spec.in file was updated to fix rpmbuild issues